happy path works

--- a/sites/all/themes/rebound/css/screen.css
+++ b/sites/all/themes/rebound/css/screen.css
@@ -126,19 +126,23 @@ body.node-type-about-us #block-system-main {
   min-height: 82px; }
 
 body.page-about-us .page-wrapper,
-body.programs-and-services .page-wrapper {
+body.programs-and-services .page-wrapper,
+body.node-type-fundraising-page .page-wrapper {
   background: #ddeaf5; }
 
 body.page-about-us .page-title,
-body.programs-and-services .page-title {
+body.programs-and-services .page-title,
+body.node-type-fundraising-page .page-title {
   display: none; }
 
 body.page-about-us .region-content,
-body.programs-and-services .region-content {
+body.programs-and-services .region-content,
+body.node-type-fundraising-page .region-content {
   position: relative; }
 
 body.page-about-us .main-wrapper,
-body.programs-and-services .main-wrapper {
+body.programs-and-services .main-wrapper,
+body.node-type-fundraising-page .main-wrapper {
   position: relative; }
 
 body.annual-reports .page-wrapper {
@@ -150,9 +154,11 @@ body.annual-reports .page-title {
 body.annual-reports .block.about-us-back {
   display: none; }
 
-body.node-type-programs-services .main-wrapper {
+body.node-type-programs-services .main-wrapper,
+body.node-type-fundraising-page .main-wrapper {
   padding: 20px 0; }
-  body.node-type-programs-services .main-wrapper > div > div {
+  body.node-type-programs-services .main-wrapper > div > div,
+  body.node-type-fundraising-page .main-wrapper > div > div {
     background: #29abe2;
     overflow: hidden;
     padding: 20px; }
@@ -997,20 +1003,23 @@ ul.donors {
       text-decoration: none;
       font-size: 0; }
 
-.view-program .views-field-title {
+.view-program .views-field-title,
+body.node-type-fundraising-page .main-wrapper .views-field-title {
   float: left;
   width: 200px;
   margin-right: 80px;
   margin-bottom: 20px;
   text-align: center; }
-  .view-program .views-field-title h2 {
+  .view-program .views-field-title h2,
+  body.node-type-fundraising-page .main-wrapper .views-field-title h2 {
     text-transform: uppercase;
     line-height: 85%;
     padding-bottom: 5px;
     border-bottom: 4px solid white;
     font-size: 2.5em; }
 
-.view-program .buttons {
+.view-program .buttons,
+body.node-type-fundraising-page .main-wrapper .buttons {
   float: left;
   clear: left;
   width: 200px;
@@ -1019,28 +1028,34 @@ ul.donors {
   text-align: center;
   position: relative;
   z-index: 1; }
-  .view-program .buttons a {
+  .view-program .buttons a,
+  body.node-type-fundraising-page .main-wrapper .buttons a {
     display: inline-block;
     color: white;
     text-decoration: none;
     font-weight: bold;
     margin: 6px 0; }
-    .view-program .buttons a:hover {
+    .view-program .buttons a:hover,
+    body.node-type-fundraising-page .main-wrapper .buttons a:hover {
       border-bottom: 1px solid white;
       margin-bottom: 5px; }
-  .view-program .buttons .btn-all-programs {
+  .view-program .buttons .btn-all-programs,
+  body.node-type-fundraising-page .main-wrapper .buttons .btn-all-programs {
     padding-left: 18px;
     background: url(../img/chevron-left.png) no-repeat left center; }
-  .view-program .buttons .btn-next-program {
+  .view-program .buttons .btn-next-program,
+  body.node-type-fundraising-page .main-wrapper .buttons .btn-next-program {
     padding-right: 18px;
     background: url(../img/chevron-right.png) no-repeat right center; }
 
-.view-program .views-field-field-youtube-video-id {
+.view-program .views-field-field-youtube-video-id,
+body.node-type-fundraising-page .main-wrapper .views-field-field-youtube-video-id {
   overflow: hidden;
   margin-bottom: 20px;
   position: relative;
   cursor: pointer; }
-  .view-program .views-field-field-youtube-video-id:after {
+  .view-program .views-field-field-youtube-video-id:after,
+  body.node-type-fundraising-page .main-wrapper .views-field-field-youtube-video-id:after {
     content: "";
     position: absolute;
     left: 0;
@@ -1048,25 +1063,36 @@ ul.donors {
     right: 0;
     bottom: 0;
     background: url(../img/icon-play.png) no-repeat center center; }
-  .view-program .views-field-field-youtube-video-id:hover:after {
+  .view-program .views-field-field-youtube-video-id:hover:after,
+  body.node-type-fundraising-page .main-wrapper .views-field-field-youtube-video-id:hover:after {
     background-image: url(../img/icon-play-red.png); }
-  .view-program .views-field-field-youtube-video-id.open:after {
+  .view-program .views-field-field-youtube-video-id.open:after,
+  body.node-type-fundraising-page .main-wrapper .views-field-field-youtube-video-id.open:after {
     display: none; }
-  .view-program .views-field-field-youtube-video-id.open .field-content {
+  .view-program .views-field-field-youtube-video-id.open .field-content,
+  body.node-type-fundraising-page .main-wrapper .views-field-field-youtube-video-id.open .field-content {
     padding-bottom: 56.25%; }
-  .view-program .views-field-field-youtube-video-id img {
+  .view-program .views-field-field-youtube-video-id img,
+  body.node-type-fundraising-page .main-wrapper .views-field-field-youtube-video-id img {
     display: block;
     width: 100%; }
-  .view-program .views-field-field-youtube-video-id iframe {
+  .view-program .views-field-field-youtube-video-id iframe,
+  body.node-type-fundraising-page .main-wrapper .views-field-field-youtube-video-id iframe {
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%; }
 
-.view-program .views-field-body {
+.view-program .views-field-body,
+.view-program .node .main-content,
+body.node-type-fundraising-page .main-wrapper .views-field-body,
+body.node-type-fundraising-page .main-wrapper .node .main-content {
   position: relative; }
-  .view-program .views-field-body:before {
+  .view-program .views-field-body:before,
+  .view-program .node .main-content:before,
+  body.node-type-fundraising-page .main-wrapper .views-field-body:before,
+  body.node-type-fundraising-page .main-wrapper .node .main-content:before {
     content: "";
     display: block;
     position: absolute;
@@ -1077,14 +1103,18 @@ ul.donors {
     border-style: solid;
     border-width: 56px 56px 56px 0;
     border-color: transparent #222f7e transparent transparent; }
-  .view-program .views-field-body > div {
+  .view-program .views-field-body > div,
+  .view-program .node .main-content > div,
+  body.node-type-fundraising-page .main-wrapper .views-field-body > div,
+  body.node-type-fundraising-page .main-wrapper .node .main-content > div {
     background: #222f7e;
     padding: 15px;
     overflow: hidden;
     position: relative;
     min-height: 82px; }
 
-.view-program .views-field-field-image img {
+.view-program .views-field-field-image img,
+body.node-type-fundraising-page .main-wrapper .views-field-field-image img {
   float: left;
   clear: left;
   border-radius: 200px;
@@ -1094,7 +1124,8 @@ ul.donors {
   margin-right: 70px;
   behavior: url(/sites/all/themes/rebound/css/PIE.htc); }
 
-.view-program .close {
+.view-program .close,
+body.node-type-fundraising-page .main-wrapper .close {
   position: absolute;
   right: -15px;
   top: -15px;
@@ -1105,16 +1136,20 @@ ul.donors {
   font-size: 0;
   color: transparent; }
 
-.view-program .views-field-field-photos {
+.view-program .views-field-field-photos,
+body.node-type-fundraising-page .main-wrapper .views-field-field-photos {
   clear: both;
   position: relative;
   padding: 0 60px;
   overflow: hidden;
   margin-top: 5px; }
-  .view-program .views-field-field-photos > div {
+  .view-program .views-field-field-photos > div,
+  body.node-type-fundraising-page .main-wrapper .views-field-field-photos > div {
     overflow: hidden; }
   .view-program .views-field-field-photos .arrow-left,
-  .view-program .views-field-field-photos .arrow-right {
+  .view-program .views-field-field-photos .arrow-right,
+  body.node-type-fundraising-page .main-wrapper .views-field-field-photos .arrow-left,
+  body.node-type-fundraising-page .main-wrapper .views-field-field-photos .arrow-right {
     position: absolute;
     width: 43px;
     height: 43px;
@@ -1126,32 +1161,43 @@ ul.donors {
     border-radius: 30px;
     behavior: url(/sites/all/themes/rebound/css/PIE.htc); }
     .view-program .views-field-field-photos .arrow-left:focus,
-    .view-program .views-field-field-photos .arrow-right:focus {
+    .view-program .views-field-field-photos .arrow-right:focus,
+    body.node-type-fundraising-page .main-wrapper .views-field-field-photos .arrow-left:focus,
+    body.node-type-fundraising-page .main-wrapper .views-field-field-photos .arrow-right:focus {
       border: 2px solid white;
       margin: -24px 0 0 0; }
-  .view-program .views-field-field-photos .arrow-left {
+  .view-program .views-field-field-photos .arrow-left,
+  body.node-type-fundraising-page .main-wrapper .views-field-field-photos .arrow-left {
     background-image: url(../img/arrow-left.png);
     left: 0;
     margin-left: 2px; }
-  .view-program .views-field-field-photos .arrow-right {
+  .view-program .views-field-field-photos .arrow-right,
+  body.node-type-fundraising-page .main-wrapper .views-field-field-photos .arrow-right {
     background-image: url(../img/arrow-right.png);
     right: 0;
     margin-right: 2px; }
-  .view-program .views-field-field-photos ul {
+  .view-program .views-field-field-photos ul,
+  body.node-type-fundraising-page .main-wrapper .views-field-field-photos ul {
     list-style: none;
     margin: 0;
     padding: 0;
     width: 10000px;
     position: relative; }
-  .view-program .views-field-field-photos li {
+  .view-program .views-field-field-photos li,
+  body.node-type-fundraising-page .main-wrapper .views-field-field-photos li {
     list-style: none;
     padding: 20px 12px 0 12px;
     margin: 0;
     float: left; }
-  .view-program .views-field-field-photos img {
+  .view-program .views-field-field-photos img,
+  body.node-type-fundraising-page .main-wrapper .views-field-field-photos img {
     display: block;
     border-radius: 59px;
     border: 2px solid white; }
+
+body.node-type-fundraising-page .main-wrapper .node .main-content:before {
+  left: auto;
+  right: 100%; }
 
 .view-news .views-row,
 .view-news-page .views-row,
@@ -1970,6 +2016,7 @@ ul.donors {
 input[type=text],
 input[type=email],
 input[type=password],
+input[type=number],
 textarea {
   border: 1px solid #29abe2;
   border-radius: 2px;
@@ -2931,3 +2978,12 @@ body.front .main-wrapper .block-views {
 
 .d-flex {
   display: flex; }
+
+.flex-auto {
+  flex: 1; }
+
+.bg-blue-light {
+  background: #29abe2; }
+
+.field-name-body + .webform-client-form {
+  margin-top: 1rem; }
