--- a/sites/all/themes/rebound/sass/_forms.scss
+++ b/sites/all/themes/rebound/sass/_forms.scss
@@ -1,6 +1,7 @@
 input[type=text],
 input[type=email],
 input[type=password],
+input[type=number],
 textarea {
   border: 1px solid $blue-light;
   border-radius: 2px;
