--- a/sites/all/themes/rebound/sass/_utilities.scss
+++ b/sites/all/themes/rebound/sass/_utilities.scss
@@ -1,3 +1,15 @@
 .d-flex {
   display: flex;
 }
+
+.flex-auto {
+  flex: 1;
+}
+
+.bg-blue-light {
+  background: $blue-light;
+}
+
+.field-name-body+.webform-client-form {
+  margin-top: 1rem;
+}
