--- a/sites/all/themes/rebound/sass/_forms.scss
+++ b/sites/all/themes/rebound/sass/_forms.scss
@@ -8,6 +8,7 @@ textarea {
   line-height: 2;
   padding: 0 5px;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3) inset;
+  max-width: 97%;
 }
 
 textarea {
